create: connect normilize.scss

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,8 @@
-// * Подкючение переменных 
+//* Подкючение переменных 
 @import 'variables'
-// * Подлкючаем стили базовых настроек
+//* Подлкючаем стили базовых настроек
 @import 'settings'
-//*Стили для шапки сайта
-@import 'blocks/_header'
+//* Стили для шапки сайта
+@import 'blocks/header'
+//* Подключение normilize
+@import 'normilize'
