--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,16 @@ body {
   margin: auto;
 }
 
-.header {
+.navbar {
   background-color: #ffffff;
 }
-.header-top {
+.navbar-top {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 40px 0px 40px 0px;
 }
-.header__search {
+.navbar__search {
   margin-right: auto;
   margin-left: 108px;
 }
