--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,6 +4,8 @@
 @media (max-width: 992px)
 	.container
 		max-width: 700px
+	.logo
+		width: 132px
 	.navbar
 		&-top
 			padding-top: 30px
@@ -19,5 +21,26 @@
 				line-height: 15px
 @media (max-width: 768px)
 	.container
-		min-width: 576px
+		max-width: 576px
 		width: 92%
+	.navbar
+		&__search, &__user, &-menu
+			display: none
+	.menu
+		&-button
+			width: 16px
+			height: 11px
+			display: flex
+			flex-direction: column
+			align-items: center
+			justify-content: space-between
+			border: none
+			cursor: pointer
+			background-color: $light
+			&__line
+				width: 16px
+				height: 1px
+				background-color: $text-color
+@media (max-width: 576px)
+	.logo
+		width: 99px
