create: breadcrumb and style

--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,5 +1,7 @@
 // Основной цвет 
 $primary: #EC1F46
+// Второстипенный цвет
+$secondary: #F5FAFE
 // Цвет текста
 $text-color: #333333
 // Темный цвет темы 
