--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,5 +6,7 @@
 @import 'blocks/header'
 //* Подключение normilize
 @import 'normilize'
+//* Подключаем стили для Breadcrumb
+@import 'blocks/breadcrumb'
 //* Подключение стилей для адаптива
 @import 'media'
