--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: "Mulish", sans-serif;
+  background-color: #F5FAFE;
   color: #333333;
 }
 
@@ -440,6 +441,26 @@ template {
  */
 [hidden] {
   display: none;
+}
+
+.breacrumb-list {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  padding: 18px 0px 18px 0px;
+  margin: 0;
+}
+.breacrumb-list__item {
+  font-size: 10px;
+  line-height: 13px;
+}
+.breacrumb-list__item:not(:last-child)::after {
+  content: "/";
+  margin-right: 4px;
+}
+.breacrumb-list__link {
+  text-decoration: none;
+  color: inherit;
 }
 
 @media (max-width: 1200px) {
