--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -44,6 +44,26 @@
 				width: 16px
 				height: 1px
 				background-color: $text-color
+	.stars
+		flex-basis: content
+	.hotel
+		&-name
+			flex-basis: 100%
+		&-wrapper
+			justify-content: space-between
+		&-info
+			&__name
+				width: 100%
+			&__text
+				width: 100%
+			&__rating
+				display: none
+			&__offer
+				order: -1
+				margin-left: 0
+				margin-top: 0
+				padding: 0px 0px 0px 0px
+
 @media (max-width: 576px)
 	.logo
 		width: 99px
