--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,5 +8,7 @@
 @import 'normilize'
 //* Подключаем стили для Breadcrumb
 @import 'blocks/breadcrumb'
+//* Подключаем стили для hotel
+@import 'blocks/hotel'
 //* Подключение стилей для адаптива
 @import 'media'
