--- a/css/style.css
+++ b/css/style.css
@@ -583,7 +583,7 @@ template {
     background-color: #333333;
   }
   .stars {
-    flex-basis: content;
+    flex-basis: auto;
   }
   .hotel-name {
     flex-basis: 100%;
