--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -23,7 +23,13 @@
 	&-description
 		font-size: 12px
 		line-height: 15px
-
+	&-grid
+		display: flex
+		justify-content: space-between
+	&-right
+		display: flex
+		flex-direction: column
+		justify-content: space-between
 .stars
 	flex-basis: 100%
 .offer
@@ -85,3 +91,79 @@
 		&--prev
 			background-image: url(../img/arrow-prev.svg)
 			left: 18px
+
+.booking
+	background-color: $dark
+	color: $light
+	width: 350px
+	min-height: 210px
+	border-radius: 8px
+	padding: 28px
+	&__info
+		display: flex
+		justify-content: space-between
+		margin-bottom: 9px
+	&__price
+		display: flex
+		flex-direction: column
+	&__start
+		font-weight: 400
+		font-size: 10px
+		line-height: 14px
+	&__pricetag
+		font-weight: 800
+		font-size: 24px
+		line-height: 33px
+	&__per-room
+		font-weight: 400
+		font-size: 12px
+		line-height: 16px
+	&__room
+		margin-top: 4px
+	&__text
+		display: flex
+		align-items: center
+		justify-content: space-between
+		font-weight: 400
+		font-size: 12px
+		line-height: 16px
+		margin-bottom: 8px
+	&__description
+		margin-left: 9px
+	&__call-center
+		display: flex
+		justify-content: space-between
+		align-items: center
+		margin-bottom: 17px
+	&__heading
+		font-style: normal
+		font-weight: 600
+		font-size: 18px
+		line-height: 25px
+	&__number
+		display: flex
+		align-items: center
+		justify-content: space-between
+		text-decoration: none
+		color: inherit
+	&__num
+		font-style: normal
+		font-weight: 600
+		font-size: 18px
+		line-height: 25px
+		margin-left: 8px
+	&__button
+		width: 100%
+		min-height: 45px
+		font-weight: 600
+		font-size: 14px
+		line-height: 19px
+		border-radius: 4px
+		background-color: $primary
+		border: none
+		color: $light
+		cursor: pointer
+.map
+	// width: 347px
+	// height: 213px
+	// border-radius: 4px
