create: added cursor: pointer in logo and search

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -27,6 +27,8 @@
 			line-height: 18px
 .logo
 	width: 177px
+	&__image
+		cursor: pointer
 .search
 	display: flex
 	position: relative
@@ -51,6 +53,7 @@
 		width: 65px
 		border: none
 		background-color: $primary
+		cursor: pointer
 .user
 	display: flex
 	align-items: center
