--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,9 @@ img {
 .logo {
   width: 177px;
 }
+.logo__image {
+  cursor: pointer;
+}
 
 .search {
   display: flex;
@@ -82,6 +85,7 @@ img {
   width: 65px;
   border: none;
   background-color: #EC1F46;
+  cursor: pointer;
 }
 
 .user {
