--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,7 @@
 @import 'blocks/breadcrumb'
 //* Подключаем стили для hotel
 @import 'blocks/hotel'
+//* Подключаем стили для блока newslatter
+@import 'blocks/newsletter'
 //* Подключение стилей для адаптива
 @import 'media'
