--- a/css/style.css
+++ b/css/style.css
@@ -560,6 +560,7 @@ template {
 }
 .swiper-wrapper {
   width: 100%;
+  height: 100%;
 }
 .swiper-button {
   position: absolute;
@@ -670,6 +671,13 @@ template {
   cursor: pointer;
 }
 
+.map {
+  width: 347px;
+  height: 213px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
 .newsletter {
   position: relative;
   padding: 98px 0px 87px 0px;
@@ -745,6 +753,15 @@ template {
   .container {
     max-width: 960px;
   }
+  .swiper {
+    width: 600px;
+  }
+  .swiper-slide__image {
+    height: 100%;
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
 }
 @media (max-width: 992px) {
   .container {
@@ -770,6 +787,24 @@ template {
   }
   .search__input {
     width: 340px;
+  }
+  .hotel-grid {
+    flex-direction: column;
+  }
+  .hotel__swiper {
+    margin-bottom: 30px;
+  }
+  .hotel-right {
+    flex-direction: row;
+  }
+  .booking {
+    width: 340px;
+  }
+  .map {
+    width: 340px;
+  }
+  .swiper {
+    width: 100%;
   }
 }
 @media (max-width: 768px) {
@@ -820,9 +855,28 @@ template {
     margin-left: 0;
     margin-top: 0;
   }
+  .swiper {
+    height: 359px;
+  }
+  .hotel-right {
+    flex-direction: column;
+    min-height: 450px;
+  }
+  .booking {
+    width: 100%;
+  }
+  .map {
+    width: 100%;
+  }
 }
 @media (max-width: 576px) {
   .logo {
     width: 99px;
+  }
+  .swiper {
+    height: 250px;
+  }
+  .hotel__swiper {
+    margin-bottom: 20px;
   }
 }/*# sourceMappingURL=style.css.map */
