--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -72,6 +72,7 @@
 		z-index: 10
 	&-wrapper
 		width: 100%
+		height: 100%
 	&-button
 		position: absolute
 		top: 50%
@@ -91,7 +92,6 @@
 		&--prev
 			background-image: url(../img/arrow-prev.svg)
 			left: 18px
-
 .booking
 	background-color: $dark
 	color: $light
@@ -164,6 +164,7 @@
 		color: $light
 		cursor: pointer
 .map
-	// width: 347px
-	// height: 213px
-	// border-radius: 4px
+	width: 347px
+	height: 213px
+	border-radius: 10px
+	overflow: hidden
