fix: added in booking block font 'Nunito'

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -5,7 +5,8 @@ body
 	font-family: 'Mulish', sans-serif
 	background-color: $secondary
 	color: $text-color
-
+.booking
+	font-family: 'Nunito', sans-serif
 .container
 	max-width: 1110px
 	margin: auto
