--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ body {
   color: #333333;
 }
 
+.booking {
+  font-family: "Nunito", sans-serif;
+}
+
 .container {
   max-width: 1110px;
   margin: auto;
