--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -20,7 +20,6 @@
       display: flex
       align-items: center
       justify-content: space-between
-
       max-width: 731px
       margin: auto
    &-title
@@ -30,6 +29,7 @@
       font-weight: 300
       font-size: 24px
       line-height: 30px
+      margin: 0
       &__strong
          font-weight: 600
          font-size: 36px
