--- a/css/style.css
+++ b/css/style.css
@@ -513,6 +513,51 @@ template {
   flex-direction: column;
   justify-content: space-between;
 }
+.hotel-slider {
+  width: 728px;
+  height: 450px;
+}
+.hotel-slider__item {
+  position: reletive;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.hotel-slider__item:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
+  z-index: 10;
+}
+.hotel-slider__button {
+  position: absolute;
+  top: 50%;
+  z-index: 99;
+  transform: translateY(-50%);
+  width: 30px;
+  height: 30px;
+  border: none;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 10px;
+  background-color: transparent;
+}
+.hotel-slider__button--next {
+  right: 18px;
+  background-image: url(../img/arrow-next.svg);
+}
+.hotel-slider__button--prev {
+  background-image: url(../img/arrow-prev.svg);
+  left: 18px;
+}
 
 .stars {
   flex-basis: 100%;
@@ -542,51 +587,6 @@ template {
 .rating__counter {
   font-size: 14px;
   line-height: 18px;
-}
-
-.swiper {
-  position: reletive;
-  width: 728px;
-  height: 450px;
-  border-radius: 8px;
-}
-.swiper:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
-  z-index: 10;
-}
-.swiper-wrapper {
-  width: 100%;
-  height: 100%;
-}
-.swiper-button {
-  position: absolute;
-  top: 50%;
-  z-index: 99;
-  transform: translateY(-50%);
-  width: 30px;
-  height: 30px;
-  border: none;
-  cursor: pointer;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 10px;
-  background-color: transparent;
-}
-.swiper-button--next {
-  right: 18px;
-  background-image: url(../img/arrow-next.svg);
-}
-.swiper-button--prev {
-  background-image: url(../img/arrow-prev.svg);
-  left: 18px;
 }
 
 .booking {
