--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,7 @@
 @import 'blocks/hotel'
 //* Подключаем стили для блока newslatter
 @import 'blocks/newsletter'
+//* Подключаем стили для блока reviews
+@import 'blocks/reviews'
 //* Подключение стилей для адаптива
 @import 'media'
