--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,8 +1,10 @@
 @media (max-width: 1200px)
 	.container
 		max-width: 960px
+	.hotel
+		&-slider
+			width: 600px
 	.swiper
-		width: 600px
 		&-slide
 			&__image
 				height: 100%
@@ -29,6 +31,8 @@
 		&__input
 			width: 340px
 	.hotel
+		&-slider
+			width: 100%
 		&-grid
 			flex-direction: column
 		&__swiper
@@ -39,8 +43,16 @@
 		width: 340px
 	.map
 		width: 340px
-	.swiper
-		width: 100%
+	// .swiper
+	// 	width: 100%
+	.reviews
+		&-slider
+			&__item
+				max-width: 580px
+		&__title
+			font-size: 30px
+			line-height: 38px
+			margin: 0px 0px 50px 0px
 @media (max-width: 768px)
 	.container
 		max-width: 576px
@@ -82,9 +94,11 @@
 				order: -1
 				margin-left: 0
 				margin-top: 0
-	.swiper
-		height: 359px
+	// .swiper
+	// 	height: 359px
 	.hotel
+		&-slider
+			height: 359px
 		&-right
 			flex-direction: column
 			min-height: 450px
@@ -98,15 +112,38 @@
 			max-width: 576px
 			width: 92%
 			flex-direction: column
+			// align-items: start
 		&__title
 			margin-top: 0
 			margin-bottom: 37px
+	.reviews
+		&-slider
+			&__item
+				padding: 0px 30px 30px 30px
+				&:after, &:before
+					display: none
+			&__button
+				top: 32px
+				&--prev
+					left: 50%
+					transform: translate(-50%, 0)
+					margin-left: -65px
+				&--next
+					right: 50%
+					margin-right: -65px
+					transform: translate(50%, 0)
+		&__title
+			font-size: 18px
+			line-height: 23px
+			margin: 0px 0px 42px 0px
 @media (max-width: 576px)
 	.logo
 		width: 99px
-	.swiper
-		height: 250px
+	// .swiper
+	// 	height: 250px
 	.hotel
+		&-slider
+			height: 250px
 		&__swiper
 			margin-bottom: 20px
 	.newsletter
