--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -8,14 +8,13 @@
       text-align: center
       text-transform: uppercase
       margin: 0px 0px 70px 0px
-
    &-slider
       &__item
          position: relative
          display: flex
          flex-direction: column
          align-items: center
-         width: 730px
+         max-width: 730px
          margin: 45px auto 0
          background-color: #ffffff
          border-radius: 8px
