--- a/css/style.css
+++ b/css/style.css
@@ -685,10 +685,9 @@ template {
 .newsletter {
   position: relative;
   padding: 98px 0px 87px 0px;
-  background-image: url(../img/newsletter-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  min-height: 260px;
 }
 .newsletter:before {
   content: "";
