--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -1,10 +1,10 @@
 .newsletter
    position: relative
    padding: 98px 0px 87px 0px
-   background-image: url(../img/newsletter-bg.jpg)
    background-repeat: no-repeat
    background-size: cover
-   background-position: center
+   min-height: 260px
+
    &:before
       content: ''
       position: absolute
