--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,6 +10,9 @@
 				height: 100%
 				width: 100%
 				object-fit: cover
+	.card
+		width: 230px
+		height: 230px
 @media (max-width: 992px)
 	.container, .newsletter-wrapper
 		max-width: 700px
@@ -53,6 +56,15 @@
 			font-size: 30px
 			line-height: 38px
 			margin: 0px 0px 50px 0px
+	.activities
+		padding: 60px 0px 70px 0px
+		&-wrapper
+			flex-wrap: wrap
+		&__card
+			margin-bottom: 20px
+	.card
+		width: 340px
+		height: 230px
 @media (max-width: 768px)
 	.container
 		max-width: 576px
@@ -117,6 +129,7 @@
 			margin-top: 0
 			margin-bottom: 37px
 	.reviews
+		padding: 40px 0px 60px 0px
 		&-slider
 			&__item
 				padding: 0px 30px 30px 30px
@@ -136,6 +149,9 @@
 			font-size: 18px
 			line-height: 23px
 			margin: 0px 0px 42px 0px
+	.card
+		width: 48%
+		height: 225px
 @media (max-width: 576px)
 	.logo
 		width: 99px
@@ -162,4 +178,13 @@
 				font-size: 30px
 				line-height: 38px
 	.subscribe
+		width: 100%
+	.activities
+		padding: 40px 0px 60px 0px
+		&__card
+			margin-bottom: 20px
+		&__title
+			font-size: 18px
+			line-height: 23px
+	.card
 		width: 100%
