--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,5 +14,7 @@
 @import 'blocks/newsletter'
 //* Подключаем стили для блока reviews
 @import 'blocks/reviews'
+//* Подключаем стили для блока activities
+@import 'blocks/activities'
 //* Подключение стилей для адаптива
 @import 'media'
