--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,5 +16,7 @@
 @import 'blocks/reviews'
 //* Подключаем стили для блока activities
 @import 'blocks/activities'
+//* Подключаем стили для блока packages
+@import 'blocks/packages'
 //* Подключение стилей для адаптива
 @import 'media'
