--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,5 +18,7 @@
 @import 'blocks/activities'
 //* Подключаем стили для блока packages
 @import 'blocks/packages'
+//* Подключаем стили для блока footer
+@import 'blocks/footer'
 //* Подключение стилей для адаптива
 @import 'media'
