--- a/css/style.css
+++ b/css/style.css
@@ -1271,24 +1271,26 @@ template {
     width: 230px;
     height: 230px;
   }
+  .grid {
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
+  }
+  .grid__room {
+    margin-bottom: 24px;
+  }
+  .grid-card-1__info {
+    padding: 30px 21px 25px 32px;
+  }
+  .grid-card-1__title {
+    margin-bottom: 20px;
+  }
+  .grid-card-1__text {
+    margin: 0px 0px 24px 0px;
+  }
+  .footer__input {
+    flex-basis: 100%;
+  }
 }
-.grid {
-  grid-row-gap: 20px;
-  grid-column-gap: 20px;
-}
-.grid__room {
-  margin-bottom: 24px;
-}
-.grid-card-1__info {
-  padding: 30px 21px 25px 32px;
-}
-.grid-card-1__title {
-  margin-bottom: 20px;
-}
-.grid-card-1__text {
-  margin: 0px 0px 24px 0px;
-}
-
 @media (max-width: 992px) {
   .container, .newsletter-wrapper {
     max-width: 700px;
@@ -1378,6 +1380,50 @@ template {
     padding: 40px 21px 30px 40px;
     max-width: 355px;
     min-height: 500px;
+  }
+  .footer {
+    padding: 73px 0px 33px 0px;
+  }
+  .footer-wrapper {
+    grid-template-columns: repeat(6, 1fr);
+    grid-row-gap: 40px;
+  }
+  .footer__input {
+    flex-basis: 49%;
+  }
+  .footer__logo {
+    grid-row: 1/2;
+    grid-column: span 2;
+  }
+  .footer__social-network {
+    grid-row: 1/2;
+    grid-column: span 4;
+    align-self: center;
+  }
+  .footer__legal {
+    grid-column: span 2;
+  }
+  .footer__categories {
+    grid-row: 2/3;
+    grid-column: span 2;
+  }
+  .footer__additional {
+    grid-column: span 2;
+  }
+  .footer__contact-details {
+    grid-column: span 5;
+    grid-row: 3;
+  }
+  .footer__contact-form {
+    grid-column: span 5;
+    grid-row: 4;
+  }
+  .disclaimer__wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .disclaimer__text {
+    grid-column-start: 1;
+    grid-column-end: 3;
   }
 }
 @media (max-width: 768px) {
@@ -1501,6 +1547,9 @@ template {
     padding: 30px 20px 30px 25px;
     height: auto;
   }
+  .footer__input {
+    flex-basis: 100%;
+  }
 }
 @media (max-width: 576px) {
   .logo {
@@ -1576,5 +1625,67 @@ template {
   .grid-card {
     max-width: 100%;
     height: 100%;
+  }
+  .footer-wrapper {
+    grid-template-columns: 1fr;
+    grid-row-gap: 20px;
+  }
+  .footer__form {
+    width: 93%;
+  }
+  .footer__logo {
+    grid-row: 1;
+    grid-column: 1;
+  }
+  .footer__social-network {
+    grid-row: 2;
+    grid-column: 1;
+  }
+  .footer__additional {
+    grid-row: 3;
+    grid-column: 1;
+  }
+  .footer__categories {
+    grid-row: 4;
+    grid-column: 1;
+  }
+  .footer__legal {
+    grid-row: 5;
+    grid-column: 1;
+  }
+  .footer__contact-details {
+    grid-row: 6;
+    grid-column: 1;
+  }
+  .footer__contact-form {
+    grid-row: 7;
+    grid-column: 1;
+  }
+  .footer__input {
+    flex-basis: 92%;
+  }
+  .footer__message {
+    flex-basis: 92%;
+  }
+  .footer__info {
+    flex-basis: 140px;
+  }
+  .footer__item {
+    font-size: 12px;
+  }
+  .footer__title {
+    font-size: 14px;
+  }
+  .disclaimer__wrapper {
+    grid-template-columns: 1fr;
+    grid-row-gap: 20px;
+  }
+  .disclaimer__text {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .disclaimer__image {
+    grid-column: 1;
+    grid-row: 2;
   }
 }/*# sourceMappingURL=style.css.map */
