--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -108,6 +108,7 @@
    height: 500px
    &__photo
       position: relative
+      height: 250px
    &__image
       border-radius: 8px 8px 0px 0px
       object-fit: cover
