--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,9 @@ img {
   font-size: 14px;
   line-height: 18px;
 }
+.navbar-menu__item--mobile-visible {
+  display: none;
+}
 
 .logo {
   width: 177px;
@@ -96,6 +99,7 @@ img {
   display: flex;
   align-items: center;
   text-decoration: none;
+  max-width: 160px;
 }
 .user__avatar {
   width: 40px;
@@ -1432,8 +1436,52 @@ template {
     max-width: 576px;
     width: 92%;
   }
-  .navbar__search, .navbar__user, .navbar-menu {
+  .search__input {
+    width: 100%;
+  }
+  body {
+    padding-top: 78px;
+  }
+  .navbar--mobile-fixed {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: 99;
+  }
+  .navbar__user--mobile-hidden, .navbar__search--mobile-hidden {
     display: none;
+  }
+  .navbar__user--mobile-visible, .navbar__search--mobile-visible {
+    display: flex;
+  }
+  .navbar__user {
+    flex-direction: column;
+  }
+  .navbar-bottom {
+    display: none;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 78px;
+    padding-top: 30px;
+  }
+  .navbar-bottom--visible {
+    display: block;
+  }
+  .navbar-menu {
+    flex-direction: column;
+  }
+  .navbar-menu__item {
+    margin-bottom: 20px;
+  }
+  .navbar-menu__item--mobile-visible {
+    display: block;
+  }
+  .user__name--light {
+    color: #ffffff;
+    margin: 10px 0px 0px 0px;
   }
   .menu-button {
     width: 16px;
