--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -141,9 +141,49 @@
 	.container
 		max-width: 576px
 		width: 92%
+	.search
+		&__input
+			width: 100%
+	body
+		padding-top: 78px
 	.navbar
-		&__search, &__user, &-menu
+		&--mobile
+			&-fixed
+				position: fixed
+				left: 0
+				top: 0
+				right: 0
+				z-index: 99
+		&__user, &__search
+			&--mobile
+				&-hidden
+					display: none
+				&-visible
+					display: flex
+		&__user
+			flex-direction: column
+		&-bottom
 			display: none
+			position: fixed
+			left: 0
+			right: 0
+			bottom: 0
+			top: 78px
+			padding-top: 30px
+			&--visible
+				display: block
+		&-menu
+			flex-direction: column
+			&__item
+				margin-bottom: 20px
+				&--mobile
+					&-visible
+						display: block
+	.user
+		&__name
+			&--light
+				color: $light
+				margin: 10px 0px 0px 0px
 	.menu
 		&-button
 			width: 16px
