--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -25,6 +25,10 @@
 			text-transform: uppercase
 			font-size: 14px
 			line-height: 18px
+		&__item
+			&--mobile
+				&-visible
+					display: none
 .logo
 	width: 177px
 	&__image
@@ -58,6 +62,7 @@
 	display: flex
 	align-items: center
 	text-decoration: none
+	max-width: 160px
 	&__avatar
 		width: 40px
 		height: 40px
