--- a/css/style.css
+++ b/css/style.css
@@ -1203,7 +1203,7 @@ template {
   color: inherit;
 }
 .footer__input {
-  color: #ffffff;
+  color: #0A223D;
   border-radius: 4px;
   border: none;
   padding: 0px 23px 0px 23px;
@@ -1212,7 +1212,8 @@ template {
   flex-basis: 48%;
 }
 .footer__message {
-  color: #ffffff;
+  min-height: 200px;
+  color: #0A223D;
   border-radius: 4px;
   padding: 18px 23px;
   border: none;
