--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -70,7 +70,7 @@
       text-decoration: none
       color: inherit
    &__input
-      color: $light
+      color: $dark
       border-radius: 4px
       border: none
       padding: 0px 23px 0px 23px
@@ -78,7 +78,8 @@
       margin-bottom: 15px
       flex-basis: 48%
    &__message
-      color: $light
+      min-height: 200px
+      color: $dark
       border-radius: 4px
       padding: 18px 23px
       border: none
