--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -70,7 +70,7 @@
       text-decoration: none
       color: inherit
    &__input
-      color: $dark
+      color: #000000
       border-radius: 4px
       border: none
       padding: 0px 23px 0px 23px
@@ -79,7 +79,7 @@
       flex-basis: 48%
    &__message
       min-height: 200px
-      color: $dark
+      color: #000000
       border-radius: 4px
       padding: 18px 23px
       border: none
@@ -103,7 +103,8 @@
       font-size: 12px
       line-height: 15px
       color: #E0E0E0
-
+.footer__message
+   color: $dark
 .disclaimer
    &__wrapper
       padding: 101px 0px 0px 0px
