creat: modal-form

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,3 +22,5 @@
 @import 'blocks/footer'
 //* Подключение стилей для адаптива
 @import 'media'
+//* Подключение стилей для modal
+@import 'blocks/modal'
