--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,35 @@ img {
   max-width: 100%;
 }
 
+.input {
+  color: #000000;
+  border-radius: 4px;
+  border: none;
+  padding: 0px 23px 0px 23px;
+  height: 50px;
+}
+
+.message {
+  color: #000000;
+  border-radius: 4px;
+  padding: 18px 23px;
+  border: none;
+}
+
+.button {
+  min-width: 160px;
+  min-height: 50px;
+  padding: 18px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ffffff;
+  background-color: #EC1F46;
+  border: none;
+  border-radius: 4px;
+}
+
 .navbar {
   background-color: #ffffff;
 }
@@ -1203,35 +1232,13 @@ template {
   color: inherit;
 }
 .footer__input {
-  color: #000000;
-  border-radius: 4px;
-  border: none;
-  padding: 0px 23px 0px 23px;
-  height: 50px;
   margin-bottom: 15px;
   flex-basis: 48%;
 }
 .footer__message {
   min-height: 200px;
-  color: #000000;
-  border-radius: 4px;
-  padding: 18px 23px;
-  border: none;
   flex-basis: 100%;
   margin-bottom: 23px;
-}
-.footer__button {
-  min-width: 160px;
-  min-height: 50px;
-  padding: 18px;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 15px;
-  color: #ffffff;
-  background-color: #EC1F46;
-  border: none;
-  border-radius: 4px;
 }
 .footer__info {
   font-style: normal;
@@ -1747,4 +1754,71 @@ template {
     grid-column: 1;
     grid-row: 2;
   }
+}
+.modal__overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 143, 223, 0.39);
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+.modal__overlay--visible {
+  visibility: visible;
+  opacity: 1;
+}
+.modal__dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  padding: 33px 88px;
+  max-width: 478px;
+  background-color: #0A223D;
+  color: #ffffff;
+  border-radius: 8px;
+  z-index: 101;
+  transform: translate(-50%, -50%);
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+.modal__dialog--visible {
+  visibility: visible;
+  opacity: 1;
+}
+.modal__close {
+  position: absolute;
+  right: 18px;
+  top: 17px;
+  text-decoration: none;
+  cursor: pointer;
+}
+.modal__input {
+  width: 100%;
+  margin-bottom: 15px;
+}
+.modal__message {
+  min-height: 120px;
+  width: 100%;
+  margin-bottom: 15px;
+}
+.modal__info {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #E0E0E0;
+}
+.modal__title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  margin: 0px 0px 15px 0px;
+  text-transform: uppercase;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
