--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -13,3 +13,26 @@ body
 
 img
 	max-width: 100%
+.input
+	color: #000000
+	border-radius: 4px
+	border: none
+	padding: 0px 23px 0px 23px
+	height: 50px
+.message
+	color: #000000
+	border-radius: 4px
+	padding: 18px 23px
+	border: none
+.button
+	min-width: 160px
+	min-height: 50px
+	padding: 18px
+	font-style: normal
+	font-weight: 700
+	font-size: 12px
+	line-height: 15px
+	color: $light
+	background-color: $primary
+	border: none
+	border-radius: 4px
